--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -36,6 +36,6 @@
 </div>
 
 <div class="mt-5 text-center">
-    <p class="text-muted">Проект создан в рамках преддипломной практики.<br>Дальнейшее развитие — в дипломной работе.</p>
+    <p class="text-muted">Проект создан в рамках дипломной работы.</p>
 </div>
 {% endblock %}
