--- a/app/templates/admin/contacts_list.html
+++ b/app/templates/admin/contacts_list.html
@@ -1,7 +1,7 @@
-{% extends "base.html" %}
+{% extends "admin/base.html" %}
 {% block title %}Сообщения — админ{% endblock %}
 
-{% block content %}
+{% block admin_content %}
   <h1>Сообщения с формы контактов</h1>
 
   <table class="table table-striped">
@@ -41,21 +41,5 @@
     </tbody>
   </table>
 
-  {% if pagination.pages > 1 %}
-    <nav>
-      <ul class="pagination">
-      {% if pagination.has_prev %}
-        <li class="page-item"><a class="page-link" href="{{ url_for('admin.contacts_list', page=pagination.prev_num) }}">Prev</a></li>
-      {% endif %}
-      {% for p in range(1, pagination.pages+1) %}
-        <li class="page-item {% if p==pagination.page %}active{% endif %}">
-          <a class="page-link" href="{{ url_for('admin.contacts_list', page=p) }}">{{ p }}</a>
-        </li>
-      {% endfor %}
-      {% if pagination.has_next %}
-        <li class="page-item"><a class="page-link" href="{{ url_for('admin.contacts_list', page=pagination.next_num) }}">Next</a></li>
-      {% endif %}
-      </ul>
-    </nav>
-  {% endif %}
+{% include "pagination.html" %}
 {% endblock %}
