--- a/app/templates/admin/sidebar.html
+++ b/app/templates/admin/sidebar.html
@@ -1,5 +1,5 @@
 <div class="list-group">
-  <a href="{{ url_for('admin.dashboard') }}" class="list-group-item list-group-item-action">Dashboard</a>
+  <a href="{{ url_for('admin.dashboard') }}" class="list-group-item list-group-item-action">Панель администратора</a>
   <a href="{{ url_for('admin.users_list') }}" class="list-group-item list-group-item-action">Пользователи</a>
   <a href="{{ url_for('admin.courses_list') }}" class="list-group-item list-group-item-action">Курсы</a>
   <a href="{{ url_for('admin.files_list') }}" class="list-group-item list-group-item-action">Файлы</a>
