поправлен заголовок в Контактах

--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-  <h1>Контакты</h1>
+  <h1>Связаться с нами</h1>
 
   {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
