Добавлено открытие уроков

--- a/app/templates/lessons.html
+++ b/app/templates/lessons.html
@@ -10,7 +10,7 @@
         <div class="card-body">
           <h5 class="card-title">Урок 1. Введение в курс и основные понятия</h5>
           <p class="card-text">Обзор предмета, области применения высшей математики и ключевых понятий: множества, функции, переменные.</p>
-          <a href="#" class="btn btn-primary">Открыть</a>
+          <a href="/lessons/1" class="btn btn-primary">Открыть</a>
         </div>
       </div>
     </div>
@@ -21,7 +21,7 @@
         <div class="card-body">
           <h5 class="card-title">Урок 2. Линейные уравнения и системы</h5>
           <p class="card-text">Изучение линейных уравнений, методов их решения и анализа систем уравнений с несколькими переменными.</p>
-          <a href="#" class="btn btn-primary">Открыть</a>
+          <a href="/lessons/2" class="btn btn-primary">Открыть</a>
         </div>
       </div>
     </div>
@@ -32,7 +32,7 @@
         <div class="card-body">
           <h5 class="card-title">Урок 3. Матрицы и определители</h5>
           <p class="card-text">Основные операции с матрицами, свойства определителей и их роль в решении линейных систем.</p>
-          <a href="#" class="btn btn-primary">Открыть</a>
+          <a href="/lessons/3" class="btn btn-primary">Открыть</a>
         </div>
       </div>
     </div>
@@ -43,7 +43,7 @@
         <div class="card-body">
           <h5 class="card-title">Урок 4. Векторная алгебра</h5>
           <p class="card-text">Понятия вектора, скалярное и векторное произведения, применение в геометрии и физике.</p>
-          <a href="#" class="btn btn-primary">Открыть</a>
+          <a href="/lessons/4" class="btn btn-primary">Открыть</a>
         </div>
       </div>
     </div>
@@ -54,7 +54,7 @@
         <div class="card-body">
           <h5 class="card-title">Урок 5. Пределы и непрерывность</h5>
           <p class="card-text">Понятие предела функции, свойства непрерывных функций и примеры вычислений пределов.</p>
-          <a href="#" class="btn btn-primary">Открыть</a>
+          <a href="/lessons/5" class="btn btn-primary">Открыть</a>
         </div>
       </div>
     </div>
@@ -65,7 +65,7 @@
         <div class="card-body">
           <h5 class="card-title">Урок 6. Производная и её применение</h5>
           <p class="card-text">Основные правила дифференцирования, геометрический смысл производной и практические задачи на экстремумы.</p>
-          <a href="#" class="btn btn-primary">Открыть</a>
+          <a href="/lessons/6" class="btn btn-primary">Открыть</a>
         </div>
       </div>
     </div>
