--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,7 @@
           <!-- минимум 10 пунктов меню согласно ТЗ -->
           <li class="nav-item"><a class="nav-link" href="{{ url_for('main.index') }}">Главная</a></li>
           <li class="nav-item"><a class="nav-link" href="{{ url_for('main.courses') }}">Курсы</a></li>
+		  <li class="nav-item"><a class="nav-link" href="{{ url_for('main.ml_materials') }}">Материалы ML</a></li>
           <li class="nav-item"><a class="nav-link" href="{{ url_for('main.lessons') }}">Уроки</a></li>
           <li class="nav-item"><a class="nav-link" href="{{ url_for('main.news_list') }}">Новости</a></li>
           <li class="nav-item"><a class="nav-link" href="{{ url_for('main.instructors') }}">Преподаватели</a></li>
